--- a/upload-questoes.html
+++ b/upload-questoes.html
@@ -98,10 +98,10 @@
   .buttons{
     grid-column:1/-1;
     display:flex;
+    flex-wrap:wrap;
     justify-content:flex-end;
-    gap:10px;
+    gap:8px;
     margin-top:4px;
-    flex-wrap:wrap; /* permite quebrar linha se tiver muitos botões */
   }
   button{
     border:none;
@@ -276,100 +276,13 @@
     color:#b91c1c;
   }
 
-  /* ==== PREVIEW MODAL ==== */
-  .preview-overlay{
-    position:fixed;
-    inset:0;
-    background:rgba(15,23,42,.65);
-    display:none;
-    align-items:center;
-    justify-content:center;
-    z-index:9997;
-  }
-  .preview-modal{
-    background:#f9fafb;
-    border-radius:18px;
-    max-width:460px;
-    width:100%;
-    padding:16px 18px 14px;
-    box-shadow:var(--shadow);
-    max-height:80vh;
-    overflow:auto;
-  }
-  .preview-header{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    margin-bottom:8px;
-  }
-  .preview-title{
-    font-size:15px;
-    font-weight:700;
-  }
-  .preview-close{
-    border:none;
-    background:transparent;
-    font-size:18px;
-    cursor:pointer;
-    padding:0 4px;
-    line-height:1;
-  }
-  .preview-type{
-    font-size:11px;
-    color:var(--muted);
-    margin-bottom:4px;
-  }
-  .preview-prompt{
-    font-size:14px;
-    font-weight:600;
-    margin-bottom:8px;
-  }
-  .preview-image{
-    max-width:100%;
-    border-radius:12px;
-    margin-bottom:8px;
-    display:block;
-  }
-  .preview-options{
-    font-size:13px;
-    padding-left:16px;
-    margin-bottom:4px;
-  }
-  .preview-badge-correct{
-    display:inline-block;
-    margin-left:6px;
-    padding:2px 6px;
-    border-radius:999px;
-    font-size:11px;
-    background:#dcfce7;
-    color:#166534;
-  }
-  .preview-small{
-    font-size:11px;
-    color:var(--muted);
-    margin-top:6px;
-  }
-  .preview-chip-list{
-    display:flex;
-    flex-wrap:wrap;
-    gap:6px;
-    margin-bottom:6px;
-  }
-  .preview-chip{
-    font-size:12px;
-    padding:4px 8px;
-    border-radius:999px;
-    background:#e5e7eb;
-  }
-  .preview-match-row{
-    font-size:13px;
-    padding:2px 0;
-  }
-
   @media(max-width:720px){
     .app{padding:14px 10px 18px;}
     form{grid-template-columns:1fr;}
     .search-row{grid-template-columns:1fr;}
+    .buttons{
+      justify-content:flex-start;
+    }
   }
 </style>
 </head>
@@ -422,13 +335,13 @@
       <select id="typeQuick">
         <option value="">— não forçar —</option>
         <option value="mcq">MCQ (múltipla escolha)</option>
-        <option value="yesno">Yes/No (MCQ especial)</option>
+        <option value="yesno">Yes/No</option>
         <option value="truefalse">True/False</option>
         <option value="fillblank">Fill in the blank</option>
         <option value="order">Order sentence</option>
         <option value="match">Match pairs</option>
-        <option value="image_mcq">Picture choice (image_mcq)</option>
-        <option value="audio_mcq">Audio choice (audio_mcq)</option>
+        <option value="image_mcq">Image MCQ (escolher imagem)</option>
+        <option value="audio_mcq">Audio MCQ (ouvir e escolher)</option>
       </select>
       <div class="hint">Só preenche o campo type dentro do JSON se você quiser.</div>
     </div>
@@ -440,26 +353,21 @@
         Cole/edite aqui um objeto JSON com os campos da questão.<br>
         Exemplo básico para MCQ:
         <code>
-{"type":"mcq","prompt":"What is this?","image":"images/apple.png","options":[{"label":"Apple","value":"apple"},{"label":"Banana","value":"banana"}],"answer":"apple","grammarTag":"vocabulary-fruits","skillType":"vocabulary","difficulty":"easy"}
+{"type":"mcq","prompt":"What is this?","image":"Level0/Unit1/data1/images/image1.png","options":[{"label":"Apple","value":"apple"},{"label":"Banana","value":"banana"}],"answer":"apple","grammarTag":"vocabulary-fruits","skillType":"vocabulary","difficulty":"easy"}
         </code>
       </div>
     </div>
 
     <div class="buttons">
-      <!-- 8 TEMPLATES -->
-      <button type="button" class="btn-secondary" id="btnTemplateMcq">MCQ</button>
-      <button type="button" class="btn-secondary" id="btnTemplateYesNo">Yes/No</button>
-      <button type="button" class="btn-secondary" id="btnTemplateTF">True/False</button>
-      <button type="button" class="btn-secondary" id="btnTemplateFill">Fillblank</button>
-      <button type="button" class="btn-secondary" id="btnTemplateOrder">Order</button>
-      <button type="button" class="btn-secondary" id="btnTemplateMatch">Match</button>
-      <button type="button" class="btn-secondary" id="btnTemplateImgMcq">Picture choice</button>
-      <button type="button" class="btn-secondary" id="btnTemplateAudioMcq">Audio choice</button>
-
-      <!-- PREVIEW -->
-      <button type="button" class="btn-secondary" id="btnPreview">👁 Preview</button>
-
-      <!-- SALVAR -->
+      <button type="button" class="btn-secondary" id="btnTemplateMcq">MCQ template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateYesNo">Yes/No template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateTrueFalse">True/False template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateFill">Fillblank template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateOrder">Order template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateMatch">Match template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateImageMcq">Image MCQ template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateAudioMcq">Audio MCQ template</button>
+      <button type="button" class="btn-secondary" id="btnPreview">👀 Preview</button>
       <button type="submit" class="btn-primary" id="btnSave">
         💾 Salvar questão
       </button>
@@ -505,13 +413,6 @@
   <div class="loading-box">
     <div class="spinner"></div>
     <span>Processando no Firebase…</span>
-  </div>
-</div>
-
-<!-- PREVIEW OVERLAY -->
-<div class="preview-overlay" id="previewOverlay">
-  <div class="preview-modal" id="previewModal">
-    <!-- conteúdo preenchido via JS -->
   </div>
 </div>
 
@@ -577,16 +478,6 @@
     if (btnSearch) btnSearch.disabled = !!flag;
   }
 
-  function escapeHtml(str){
-    if (str == null) return "";
-    return String(str)
-      .replace(/&/g,"&amp;")
-      .replace(/</g,"&lt;")
-      .replace(/>/g,"&gt;")
-      .replace(/"/g,"&quot;")
-      .replace(/'/g,"&#39;");
-  }
-
   // ==== Templates rápidos para JSON ====
   const txtJson = document.getElementById('json');
 
@@ -595,7 +486,7 @@
     txtJson.value = JSON.stringify({
       type: "mcq",
       prompt: "What is this?",
-      image: "images/example.png",
+      image: "Level0/Unit1/data1/images/image1.png",
       options: [
         { label: "Apple",  value: "apple" },
         { label: "Banana", value: "banana" },
@@ -613,13 +504,13 @@
   document.getElementById('btnTemplateYesNo').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "yesno",
-      prompt: "Is this Mary?",
-      image: "images/mary.png",
+      prompt: "Is this Jesus?",
+      image: "Level0/Unit1/data1/images/jesus.png",
       options: [
-        { label: "Yes", value: true },
-        { label: "No",  value: false }
+        { label: "Yes", value: "yes" },
+        { label: "No",  value: "no" }
       ],
-      answer: true,
+      answer: "yes",
       grammarTag: "yes-no-questions",
       skillType: "listening",
       difficulty: "easy"
@@ -627,24 +518,28 @@
   };
 
   // 3) True/False
-  document.getElementById('btnTemplateTF').onclick = () => {
+  document.getElementById('btnTemplateTrueFalse').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "truefalse",
-      prompt: "Mary visited Elizabeth.",
-      statement: "Mary visited Elizabeth.",
-      answer: true,
-      grammarTag: "statements",
+      prompt: "Jesus was born in Bethlehem.",
+      image: "Level0/Unit1/data1/images/nativity.png",
+      options: [
+        { label: "True",  value: "true" },
+        { label: "False", value: "false" }
+      ],
+      answer: "true",
+      grammarTag: "true-false-statements",
       skillType: "reading",
       difficulty: "easy"
     }, null, 2);
   };
 
-  // 4) Fillblank
+  // 4) Fill in the blank
   document.getElementById('btnTemplateFill').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "fillblank",
       prompt: "Jesus was born in {blank}.",
-      image: "images/bethlehem.png",
+      image: "Level0/Unit1/data1/images/bethlehem.png",
       options: [
         { label: "Nazareth",  value: "Nazareth" },
         { label: "Bethlehem", value: "Bethlehem" }
@@ -656,198 +551,149 @@
     }, null, 2);
   };
 
-  // 5) Order
+  // 5) Order sentence
   document.getElementById('btnTemplateOrder').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "order",
-      prompt: "Put the words in the correct order.",
-      tokens: ["Mary", "visits", "Elizabeth"],
-      answerTokens: ["Mary", "visits", "Elizabeth"],
-      joinWith: " ",
-      grammarTag: "word-order",
+      prompt: "Put the words in the correct order:",
+      image: "Level0/Unit1/data1/images/order-example.png",
+      tokens: ["Jesus", "is", "born"],
+      answer: ["Jesus", "is", "born"],
+      grammarTag: "word-order-basic",
       skillType: "grammar",
       difficulty: "medium"
     }, null, 2);
   };
 
-  // 6) Match (pairs)
+  // 6) Match pairs
   document.getElementById('btnTemplateMatch').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "match",
-      prompt: "Match the people with the description.",
+      prompt: "Match the names to the pictures.",
       pairs: [
-        { left: "Mary",      right: "Mother of Jesus" },
-        { left: "Elizabeth", right: "Mother of John" }
+        {
+          left: "Mary",
+          rightImage: "Level0/Unit1/data1/images/mary.png"
+        },
+        {
+          left: "Elizabeth",
+          rightImage: "Level0/Unit1/data1/images/elizabeth.png"
+        }
       ],
-      grammarTag: "relationships",
+      grammarTag: "vocabulary-names",
       skillType: "vocabulary",
       difficulty: "medium"
     }, null, 2);
   };
 
-  // 7) Picture choice (image_mcq)
-  document.getElementById('btnTemplateImgMcq').onclick = () => {
+  // 7) Image MCQ
+  document.getElementById('btnTemplateImageMcq').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "image_mcq",
       prompt: "Who is Mary?",
       options: [
-        { label: "Mary",  value: "mary",  image: "images/mary.png" },
-        { label: "Elizabeth", value: "elizabeth", image: "images/elizabeth.png" }
+        {
+          image: "Level0/Unit1/data1/images/mary.png",
+          value: "mary"
+        },
+        {
+          image: "Level0/Unit1/data1/images/elizabeth.png",
+          value: "elizabeth"
+        }
       ],
       answer: "mary",
-      grammarTag: "characters",
-      skillType: "visual-recognition",
+      grammarTag: "vocabulary-people",
+      skillType: "vocabulary",
       difficulty: "easy"
     }, null, 2);
   };
 
-  // 8) Audio choice (audio_mcq)
+  // 8) Audio MCQ
   document.getElementById('btnTemplateAudioMcq').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "audio_mcq",
-      prompt: "Listen and choose the correct sentence.",
-      audioQuestion: "audio/sentence1.mp3",
+      prompt: "Who do you hear?",
+      promptAudio: "Level0/Unit1/data1/sounds/mary.mp3",
       options: [
-        { label: "Mary visits Elizabeth.", value: "a", audio: "audio/opt_a.mp3" },
-        { label: "Elizabeth visits Mary.", value: "b", audio: "audio/opt_b.mp3" }
+        { label: "Mary",      value: "mary" },
+        { label: "Elizabeth", value: "elizabeth" }
       ],
-      answer: "a",
-      grammarTag: "listening-comprehension",
+      answer: "mary",
+      grammarTag: "listening-names",
       skillType: "listening",
-      difficulty: "medium"
+      difficulty: "easy"
     }, null, 2);
   };
 
-  // ==== PREVIEW ====
-  const btnPreview = document.getElementById('btnPreview');
-  const previewOverlay = document.getElementById('previewOverlay');
-  const previewModal = document.getElementById('previewModal');
+  // ==== Botão PREVIEW (localStorage + nova aba) ====
+  document.getElementById('btnPreview').onclick = () => {
+    const levelRaw = document.getElementById('level').value.trim();
+    const unitRaw  = document.getElementById('unit').value.trim();
+    const faseRaw  = document.getElementById('fase').value.trim();
+    const qIdRaw   = document.getElementById('questionId').value.trim();
+    const orderRaw = document.getElementById('order').value.trim();
+    const jsonStr  = txtJson.value.trim();
 
-  function closePreview(){
-    previewOverlay.style.display = 'none';
-    previewModal.innerHTML = "";
-  }
-
-  function renderOptionsList(obj){
-    if (!Array.isArray(obj.options) || obj.options.length === 0) return "";
-    let html = '<ol class="preview-options">';
-    obj.options.forEach(opt => {
-      const label = (opt && typeof opt === "object") ? (opt.label ?? opt.value) : opt;
-      const val   = (opt && typeof opt === "object") ? opt.value : opt;
-      const isCorrect =
-        (obj.answer !== undefined && obj.answer !== null) &&
-        (val === obj.answer || label === obj.answer);
-      html += "<li>" + escapeHtml(label);
-      if (opt.image){
-        html += " — <span style='font-size:11px;'>img: " + escapeHtml(opt.image) + "</span>";
-      }
-      if (opt.audio){
-        html += " — <span style='font-size:11px;'>audio: " + escapeHtml(opt.audio) + "</span>";
-      }
-      if (isCorrect){
-        html += "<span class='preview-badge-correct'>answer</span>";
-      }
-      html += "</li>";
-    });
-    html += "</ol>";
-    return html;
-  }
-
-  function openPreview(obj){
-    const type = obj.type || "(sem type)";
-    const prompt = obj.prompt || obj.statement || "(sem prompt)";
-    let html = "";
-
-    html += '<div class="preview-header">';
-    html += '<div class="preview-title">Preview da questão</div>';
-    html += '<button class="preview-close" type="button" id="previewCloseBtn">&times;</button>';
-    html += '</div>';
-
-    html += '<div class="preview-type">Type: <code>' + escapeHtml(type) + '</code></div>';
-    html += '<div class="preview-prompt">' + escapeHtml(prompt) + '</div>';
-
-    if (obj.image){
-      html += '<img class="preview-image" src="' + escapeHtml(obj.image) + '" alt="question image">';
-    }
-
-    // Render específico por tipo
-    if (type === "fillblank"){
-      const shown = String(obj.prompt || "").replace("{blank}", "_____");
-      html += '<div class="preview-small">Fill in the blank:</div>';
-      html += '<div style="font-size:13px;margin-bottom:6px;">' + escapeHtml(shown) + '</div>';
-      if (obj.answer){
-        html += '<div class="preview-small">Answer: <b>' + escapeHtml(obj.answer) + '</b></div>';
-      }
-    } else if (type === "order"){
-      const toks = Array.isArray(obj.tokens) ? obj.tokens : [];
-      html += '<div class="preview-small">Tokens a ordenar:</div>';
-      html += '<div class="preview-chip-list">';
-      toks.forEach(t => {
-        html += '<span class="preview-chip">' + escapeHtml(t) + '</span>';
-      });
-      html += '</div>';
-      if (Array.isArray(obj.answerTokens)){
-        html += '<div class="preview-small">Resposta correta:</div>';
-        html += '<div style="font-size:12px;margin-bottom:4px;">' +
-          escapeHtml(obj.answerTokens.join(obj.joinWith || " ")) +
-          '</div>';
-      }
-    } else if (type === "match"){
-      const pairs = Array.isArray(obj.pairs) ? obj.pairs : [];
-      html += '<div class="preview-small">Pairs:</div>';
-      pairs.forEach(p => {
-        html += '<div class="preview-match-row">' +
-          escapeHtml(p.left || "") + ' &nbsp;—&nbsp; ' +
-          escapeHtml(p.right || "") +
-          '</div>';
-      });
-    } else {
-      // MCQ, yesno, truefalse, image_mcq, audio_mcq ou qualquer outro com options
-      html += renderOptionsList(obj);
-      if (obj.answer != null && !Array.isArray(obj.options)){
-        html += '<div class="preview-small">Answer: <b>' + escapeHtml(String(obj.answer)) + '</b></div>';
-      }
-    }
-
-    // Metadados extras
-    const metaBits = [];
-    if (obj.grammarTag) metaBits.push("grammarTag: " + obj.grammarTag);
-    if (obj.skillType) metaBits.push("skillType: " + obj.skillType);
-    if (obj.difficulty) metaBits.push("difficulty: " + obj.difficulty);
-
-    if (metaBits.length){
-      html += '<div class="preview-small">' + escapeHtml(metaBits.join(" | ")) + '</div>';
-    }
-
-    previewModal.innerHTML = html;
-    previewOverlay.style.display = 'flex';
-
-    const btnClose = document.getElementById('previewCloseBtn');
-    if (btnClose){
-      btnClose.onclick = closePreview;
-    }
-  }
-
-  btnPreview.addEventListener('click', () => {
-    const jsonStr = txtJson.value.trim();
     if (!jsonStr){
-      showToast("Não há JSON para pré-visualizar.");
+      showToast("Preencha o JSON da questão para pré-visualizar.");
       return;
     }
-    try{
-      const obj = JSON.parse(jsonStr);
-      openPreview(obj);
-    }catch(err){
-      console.error("JSON inválido no preview:", err);
-      showToast("Erro: JSON inválido. Verifique antes de pré-visualizar.");
-    }
-  });
 
-  previewOverlay.addEventListener('click', (e) => {
-    if (e.target === previewOverlay){
-      closePreview();
+    let obj;
+    try{
+      obj = JSON.parse(jsonStr);
+    } catch(err){
+      console.error("JSON inválido para preview:", err);
+      showToast("Erro: JSON inválido. Não é possível gerar o preview.");
+      return;
     }
-  });
+
+    const levelKey = normalizeDir("Level", levelRaw || "0", "0");
+    const unitKey  = normalizeDir("Unit",  unitRaw  || "1", "1");
+    const faseKey  = String(parseInt(faseRaw,10) || 1);
+
+    let qId = qIdRaw || obj.id || ("Q_preview_" + Date.now());
+    obj.id = qId;
+
+    let orderNum = null;
+    if (orderRaw){
+      const n = parseInt(orderRaw,10);
+      if (!isNaN(n) && n > 0) orderNum = n;
+    }
+    if (orderNum == null && obj.order != null){
+      orderNum = obj.order;
+    }
+
+    const meta = {
+      level: levelKey,
+      unit:  unitKey,
+      fase:  faseKey,
+      questionId: qId,
+      order: orderNum || 1,
+      difficulty: obj.difficulty || "easy",
+      tags: {
+        grammar:    obj.grammarTag || (obj.tags && obj.tags.grammar) || "",
+        vocabulary: obj.vocabularyTag || obj.vocabTag || (obj.tags && obj.tags.vocabulary) || "",
+        skill:      obj.skillType || (obj.tags && obj.tags.skill) || ""
+      }
+    };
+
+    const payload = {
+      meta,
+      question: obj
+    };
+
+    try{
+      localStorage.setItem("qaPreviewPayload", JSON.stringify(payload));
+      const win = window.open("qa-preview.html", "_blank");
+      if (!win){
+        showToast("Pop-up bloqueado. Libere pop-ups para ver o preview.");
+      }
+    } catch(err){
+      console.error("Erro ao salvar payload de preview:", err);
+      showToast("Erro ao preparar o preview. Veja o console.");
+    }
+  };
 
   // ==== Salvando questão + activity ====
   document.getElementById('q-form').addEventListener('submit', async (e) => {
