--- a/upload-questoes.html
+++ b/upload-questoes.html
@@ -280,9 +280,6 @@
     .app{padding:14px 10px 18px;}
     form{grid-template-columns:1fr;}
     .search-row{grid-template-columns:1fr;}
-    .buttons{
-      justify-content:flex-start;
-    }
   }
 </style>
 </head>
@@ -336,12 +333,12 @@
         <option value="">— não forçar —</option>
         <option value="mcq">MCQ (múltipla escolha)</option>
         <option value="yesno">Yes/No</option>
-        <option value="truefalse">True/False</option>
+        <option value="truefalse">True / False</option>
+        <option value="image_mcq">Image Choice (MCQ com imagens)</option>
+        <option value="audio_mcq">Listen &amp; Choose</option>
         <option value="fillblank">Fill in the blank</option>
         <option value="order">Order sentence</option>
         <option value="match">Match pairs</option>
-        <option value="image_mcq">Image MCQ (escolher imagem)</option>
-        <option value="audio_mcq">Audio MCQ (ouvir e escolher)</option>
       </select>
       <div class="hint">Só preenche o campo type dentro do JSON se você quiser.</div>
     </div>
@@ -353,21 +350,24 @@
         Cole/edite aqui um objeto JSON com os campos da questão.<br>
         Exemplo básico para MCQ:
         <code>
-{"type":"mcq","prompt":"What is this?","image":"Level0/Unit1/data1/images/image1.png","options":[{"label":"Apple","value":"apple"},{"label":"Banana","value":"banana"}],"answer":"apple","grammarTag":"vocabulary-fruits","skillType":"vocabulary","difficulty":"easy"}
+{"type":"mcq","prompt":"What is this?","image":"images/apple.png","options":[{"label":"Apple","value":"apple"},{"label":"Banana","value":"banana"}],"answer":"apple","grammarTag":"vocabulary-fruits","skillType":"vocabulary","difficulty":"easy"}
         </code>
       </div>
     </div>
 
     <div class="buttons">
+      <!-- 8 templates + Preview + Salvar -->
       <button type="button" class="btn-secondary" id="btnTemplateMcq">MCQ template</button>
       <button type="button" class="btn-secondary" id="btnTemplateYesNo">Yes/No template</button>
       <button type="button" class="btn-secondary" id="btnTemplateTrueFalse">True/False template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateImageMcq">Image Choice template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateAudioMcq">Listen &amp; Choose template</button>
       <button type="button" class="btn-secondary" id="btnTemplateFill">Fillblank template</button>
-      <button type="button" class="btn-secondary" id="btnTemplateOrder">Order template</button>
-      <button type="button" class="btn-secondary" id="btnTemplateMatch">Match template</button>
-      <button type="button" class="btn-secondary" id="btnTemplateImageMcq">Image MCQ template</button>
-      <button type="button" class="btn-secondary" id="btnTemplateAudioMcq">Audio MCQ template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateOrder">Order sentence template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateMatch">Match pairs template</button>
+
       <button type="button" class="btn-secondary" id="btnPreview">👀 Preview</button>
+
       <button type="submit" class="btn-primary" id="btnSave">
         💾 Salvar questão
       </button>
@@ -486,7 +486,7 @@
     txtJson.value = JSON.stringify({
       type: "mcq",
       prompt: "What is this?",
-      image: "Level0/Unit1/data1/images/image1.png",
+      image: "images/example.png",
       options: [
         { label: "Apple",  value: "apple" },
         { label: "Banana", value: "banana" },
@@ -504,14 +504,14 @@
   document.getElementById('btnTemplateYesNo').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "yesno",
-      prompt: "Is this Jesus?",
-      image: "Level0/Unit1/data1/images/jesus.png",
+      prompt: "Is this Mary?",
+      image: "images/mary.png",
       options: [
         { label: "Yes", value: "yes" },
-        { label: "No",  value: "no" }
+        { label: "No",  value: "no"  }
       ],
       answer: "yes",
-      grammarTag: "yes-no-questions",
+      grammarTag: "yesno-questions",
       skillType: "listening",
       difficulty: "easy"
     }, null, 2);
@@ -521,25 +521,58 @@
   document.getElementById('btnTemplateTrueFalse').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "truefalse",
-      prompt: "Jesus was born in Bethlehem.",
-      image: "Level0/Unit1/data1/images/nativity.png",
+      prompt: "Mary visits Elizabeth.",
+      image: "images/mary_elizabeth.png",
       options: [
         { label: "True",  value: "true" },
         { label: "False", value: "false" }
       ],
       answer: "true",
-      grammarTag: "true-false-statements",
+      grammarTag: "statements",
       skillType: "reading",
       difficulty: "easy"
     }, null, 2);
   };
 
-  // 4) Fill in the blank
+  // 4) Image Choice (MCQ com imagens)
+  document.getElementById('btnTemplateImageMcq').onclick = () => {
+    txtJson.value = JSON.stringify({
+      type: "image_mcq",
+      prompt: "Click on Mary.",
+      options: [
+        { label: "Mary",      value: "mary",      image: "images/mary.png" },
+        { label: "Elizabeth", value: "elizabeth", image: "images/elizabeth.png" }
+      ],
+      answer: "mary",
+      grammarTag: "names",
+      skillType: "vocabulary",
+      difficulty: "easy"
+    }, null, 2);
+  };
+
+  // 5) Listen & Choose
+  document.getElementById('btnTemplateAudioMcq').onclick = () => {
+    txtJson.value = JSON.stringify({
+      type: "audio_mcq",
+      prompt: "Listen and choose the correct sentence.",
+      promptAudio: "audio/mary_visits_elizabeth.mp3",
+      options: [
+        { label: "Mary visits Elizabeth.", value: "a" },
+        { label: "Elizabeth visits Mary.", value: "b" }
+      ],
+      answer: "a",
+      grammarTag: "present-simple",
+      skillType: "listening",
+      difficulty: "medium"
+    }, null, 2);
+  };
+
+  // 6) Fill in the blank
   document.getElementById('btnTemplateFill').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "fillblank",
       prompt: "Jesus was born in {blank}.",
-      image: "Level0/Unit1/data1/images/bethlehem.png",
+      image: "images/bethlehem.png",
       options: [
         { label: "Nazareth",  value: "Nazareth" },
         { label: "Bethlehem", value: "Bethlehem" }
@@ -551,151 +584,122 @@
     }, null, 2);
   };
 
-  // 5) Order sentence
+  // 7) Order sentence
   document.getElementById('btnTemplateOrder').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "order",
-      prompt: "Put the words in the correct order:",
-      image: "Level0/Unit1/data1/images/order-example.png",
-      tokens: ["Jesus", "is", "born"],
-      answer: ["Jesus", "is", "born"],
-      grammarTag: "word-order-basic",
+      prompt: "Put the words in order.",
+      image: "images/order_sentence.png",
+      chunks: ["Mary", "visits", "Elizabeth"],
+      answer: ["Mary", "visits", "Elizabeth"],
+      grammarTag: "word-order",
       skillType: "grammar",
       difficulty: "medium"
     }, null, 2);
   };
 
-  // 6) Match pairs
+  // 8) Match pairs
   document.getElementById('btnTemplateMatch').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "match",
-      prompt: "Match the names to the pictures.",
+      prompt: "Match the character with the description.",
       pairs: [
-        {
-          left: "Mary",
-          rightImage: "Level0/Unit1/data1/images/mary.png"
-        },
-        {
-          left: "Elizabeth",
-          rightImage: "Level0/Unit1/data1/images/elizabeth.png"
-        }
+        { left: "Mary",      right: "Mother of Jesus" },
+        { left: "Elizabeth", right: "Mother of John" }
       ],
-      grammarTag: "vocabulary-names",
+      grammarTag: "relationships",
       skillType: "vocabulary",
       difficulty: "medium"
     }, null, 2);
   };
 
-  // 7) Image MCQ
-  document.getElementById('btnTemplateImageMcq').onclick = () => {
-    txtJson.value = JSON.stringify({
-      type: "image_mcq",
-      prompt: "Who is Mary?",
-      options: [
-        {
-          image: "Level0/Unit1/data1/images/mary.png",
-          value: "mary"
-        },
-        {
-          image: "Level0/Unit1/data1/images/elizabeth.png",
-          value: "elizabeth"
-        }
-      ],
-      answer: "mary",
-      grammarTag: "vocabulary-people",
-      skillType: "vocabulary",
-      difficulty: "easy"
-    }, null, 2);
-  };
-
-  // 8) Audio MCQ
-  document.getElementById('btnTemplateAudioMcq').onclick = () => {
-    txtJson.value = JSON.stringify({
-      type: "audio_mcq",
-      prompt: "Who do you hear?",
-      promptAudio: "Level0/Unit1/data1/sounds/mary.mp3",
-      options: [
-        { label: "Mary",      value: "mary" },
-        { label: "Elizabeth", value: "elizabeth" }
-      ],
-      answer: "mary",
-      grammarTag: "listening-names",
-      skillType: "listening",
-      difficulty: "easy"
-    }, null, 2);
-  };
-
-  // ==== Botão PREVIEW (localStorage + nova aba) ====
-  document.getElementById('btnPreview').onclick = () => {
+  // ==== Função para montar payload de preview (meta + question) ====
+  function buildPreviewPayload(){
     const levelRaw = document.getElementById('level').value.trim();
     const unitRaw  = document.getElementById('unit').value.trim();
     const faseRaw  = document.getElementById('fase').value.trim();
-    const qIdRaw   = document.getElementById('questionId').value.trim();
+    let   qId      = document.getElementById('questionId').value.trim();
     const orderRaw = document.getElementById('order').value.trim();
+    const typeQuick= document.getElementById('typeQuick').value;
     const jsonStr  = txtJson.value.trim();
 
-    if (!jsonStr){
-      showToast("Preencha o JSON da questão para pré-visualizar.");
-      return;
+    if (!levelRaw || !unitRaw || !faseRaw || !jsonStr) {
+      showToast("Preencha Level, Unit, Fase e o JSON da questão antes de fazer o preview.");
+      return null;
+    }
+
+    const levelKey = normalizeDir("Level", levelRaw, "0");
+    const unitKey  = normalizeDir("Unit",  unitRaw,  "1");
+    const faseKey  = String(parseInt(faseRaw, 10) || 1);
+
+    if (!qId) {
+      qId = `Q_${Date.now()}`;
+    }
+
+    let orderNum = null;
+    if (orderRaw) {
+      const n = parseInt(orderRaw, 10);
+      if (!isNaN(n) && n > 0) orderNum = n;
     }
 
     let obj;
-    try{
+    try {
       obj = JSON.parse(jsonStr);
-    } catch(err){
+    } catch (err) {
       console.error("JSON inválido para preview:", err);
-      showToast("Erro: JSON inválido. Não é possível gerar o preview.");
-      return;
+      showToast("Erro: JSON inválido. Verifique a sintaxe antes do preview.");
+      return null;
     }
 
-    const levelKey = normalizeDir("Level", levelRaw || "0", "0");
-    const unitKey  = normalizeDir("Unit",  unitRaw  || "1", "1");
-    const faseKey  = String(parseInt(faseRaw,10) || 1);
-
-    let qId = qIdRaw || obj.id || ("Q_preview_" + Date.now());
-    obj.id = qId;
-
-    let orderNum = null;
-    if (orderRaw){
-      const n = parseInt(orderRaw,10);
-      if (!isNaN(n) && n > 0) orderNum = n;
+    // aplica metadados básicos (mesma lógica do submit)
+    obj.id    = obj.id || qId;
+    obj.level = obj.level || levelKey;
+    obj.unit  = obj.unit  || unitKey;
+    obj.fase  = obj.fase  || faseKey;
+    if (orderNum != null) {
+      obj.order = orderNum;
     }
-    if (orderNum == null && obj.order != null){
-      orderNum = obj.order;
+    if (typeQuick && !obj.type) {
+      obj.type = typeQuick;
     }
 
     const meta = {
       level: levelKey,
       unit:  unitKey,
       fase:  faseKey,
-      questionId: qId,
-      order: orderNum || 1,
+      questionId: obj.id,
+      order: obj.order || orderNum || 1,
       difficulty: obj.difficulty || "easy",
       tags: {
-        grammar:    obj.grammarTag || (obj.tags && obj.tags.grammar) || "",
-        vocabulary: obj.vocabularyTag || obj.vocabTag || (obj.tags && obj.tags.vocabulary) || "",
-        skill:      obj.skillType || (obj.tags && obj.tags.skill) || ""
+        grammar:   obj.grammarTag || null,
+        vocabulary: obj.vocabTag || obj.vocabularyTag || null,
+        skill:     obj.skillType || null
       }
     };
 
-    const payload = {
-      meta,
-      question: obj
-    };
+    return { meta, question: obj };
+  }
 
-    try{
-      localStorage.setItem("qaPreviewPayload", JSON.stringify(payload));
-      const win = window.open("qa-preview.html", "_blank");
-      if (!win){
-        showToast("Pop-up bloqueado. Libere pop-ups para ver o preview.");
-      }
-    } catch(err){
-      console.error("Erro ao salvar payload de preview:", err);
-      showToast("Erro ao preparar o preview. Veja o console.");
+  // ==== Botão Preview: salva em localStorage e abre qa-preview.html ====
+  const btnPreview = document.getElementById('btnPreview');
+  btnPreview.addEventListener('click', () => {
+    const payload = buildPreviewPayload();
+    if (!payload) return;
+
+    try {
+      // chave usada pelo qa-preview.html (mensagem: hannahQA_preview)
+      localStorage.setItem('hannahQA_preview', JSON.stringify(payload));
+    } catch (err) {
+      console.error("Erro ao salvar preview no localStorage:", err);
+      showToast("Erro ao salvar dados no navegador para o preview.");
+      return;
     }
-  };
 
-  // ==== Salvando questão + activity ====
+    // abre nova aba com a tela de preview
+    window.open('qa-preview.html', '_blank');
+  });
+
+  // ==== Salvando questão + activity (Firebase) ====
   document.getElementById('q-form').addEventListener('submit', async (e) => {
     e.preventDefault();
 
@@ -839,7 +843,7 @@
 
       if (!act || !Array.isArray(act.questionIds) || act.questionIds.length === 0){
         resultsEl.innerHTML = "<div class='hint'>Nenhuma questão cadastrada para esta atividade ainda.</div>";
-        setStatus("<b>Status:</b> nenhuma questão encontrada em <code>activities/"+activityKey+"</code>.");
+        setStatus("<b>Status:</b> nenhuma questão encontrado em <code>activities/"+activityKey+"</code>.");
         lastSearch = {activityKey, levelKey, unitKey, faseKey, items: []};
         return;
       }
