--- a/upload-questoes.html
+++ b/upload-questoes.html
@@ -478,7 +478,7 @@
     if (btnSearch) btnSearch.disabled = !!flag;
   }
 
-  // ==== Templates rápidos para JSON ====
+    // ==== Templates rápidos para JSON ====
   const txtJson = document.getElementById('json');
 
   // 1) MCQ
@@ -557,8 +557,8 @@
       prompt: "Listen and choose the correct sentence.",
       promptAudio: "audio/mary_visits_elizabeth.mp3",
       options: [
-        { label: "Mary visits Elizabeth.", value: "a" },
-        { label: "Elizabeth visits Mary.", value: "b" }
+        { label: "Mary visits Elizabeth.",   value: "a" },
+        { label: "Elizabeth visits Mary.",   value: "b" }
       ],
       answer: "a",
       grammarTag: "present-simple",
@@ -590,6 +590,9 @@
       type: "order",
       prompt: "Put the words in order.",
       image: "images/order_sentence.png",
+      // O preview usa "options" para montar os botões de palavras
+      options: ["Mary", "visits", "Elizabeth"],
+      // (opcional) manter também "chunks" se quiser para organização futura
       chunks: ["Mary", "visits", "Elizabeth"],
       answer: ["Mary", "visits", "Elizabeth"],
       grammarTag: "word-order",
@@ -603,9 +606,16 @@
     txtJson.value = JSON.stringify({
       type: "match",
       prompt: "Match the character with the description.",
+      // left.value e right.value precisam ser IGUAIS em cada par
       pairs: [
-        { left: "Mary",      right: "Mother of Jesus" },
-        { left: "Elizabeth", right: "Mother of John" }
+        {
+          left:  { label: "Mary",      value: "mary" },
+          right: { label: "Mother of Jesus", value: "mary" }
+        },
+        {
+          left:  { label: "Elizabeth", value: "elizabeth" },
+          right: { label: "Mother of John",  value: "elizabeth" }
+        }
       ],
       grammarTag: "relationships",
       skillType: "vocabulary",
