--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@ firebase.auth().onAuthStateChanged(async user=>{
         if(d.role==="proprietario"){
           dash =
             '<a href="painel_proprietario.html" class="dashboard-link">PROPRIETARIO DASHBOARD</a>' +
-            '<a href="upload-questoes.html" class="dashboard-link">UPLOAD DE QUESTÕES</a>';
+            '<a href="Questions/Uploader/upload-questoes.html" class="dashboard-link">UPLOAD DE QUESTÕES</a>';
         } else {
           dash =
             '<a href="painel_professor.html" class="dashboard-link">PROFESSOR DASHBOARD</a>';
