--- a/Questions/Uploader/upload-questoes.html
+++ b/Questions/Uploader/upload-questoes.html
@@ -570,17 +570,18 @@
   // 6) Fill in the blank
   document.getElementById('btnTemplateFill').onclick = () => {
     txtJson.value = JSON.stringify({
-      type: "fillblank",
-      prompt: "Jesus was born in {blank}.",
-      image: "images/bethlehem.png",
-      options: [
-        { label: "Nazareth",  value: "Nazareth" },
-        { label: "Bethlehem", value: "Bethlehem" }
-      ],
-      answer: "Bethlehem",
-      grammarTag: "vocabulary-places",
-      skillType: "reading",
-      difficulty: "medium"
+      "type": "fillblank",
+    "prompt": "Elizabeth said, \"God ___ you!\"",
+    "image": "/Level0/Unit1/DataStory/images/imagem5.png",
+    "options": [
+      { "label": "bless", "value": "bless", "audio": "/Level0/Unit1/data2/sounds/som6.mp3" },
+      { "label": "welcome", "value": "welcome", "audio": "/Level0/Unit1/data2/sounds/som3.mp3" }
+    ],
+    "answer": "bless",
+    "promptAudio": "/Level0/Unit1/QA/prompt10.mp3",
+    "grammarTag": "vocabulary-greetings",
+    "skillType": "listening",
+    "difficulty": "easy"
     }, null, 2);
   };
 
