--- a/Questions/Uploader/upload-questoes - Copy.html
+++ b/Questions/Uploader/upload-questoes - Copy.html
@@ -98,8 +98,9 @@
   .buttons{
     grid-column:1/-1;
     display:flex;
+    flex-wrap:wrap;
     justify-content:flex-end;
-    gap:10px;
+    gap:8px;
     margin-top:4px;
   }
   button{
@@ -331,7 +332,10 @@
       <select id="typeQuick">
         <option value="">— não forçar —</option>
         <option value="mcq">MCQ (múltipla escolha)</option>
-        <option value="yesno">Yes/No (MCQ especial)</option>
+        <option value="yesno">Yes/No</option>
+        <option value="truefalse">True / False</option>
+        <option value="image_mcq">Image Choice (MCQ com imagens)</option>
+        <option value="audio_mcq">Listen &amp; Choose</option>
         <option value="fillblank">Fill in the blank</option>
         <option value="order">Order sentence</option>
         <option value="match">Match pairs</option>
@@ -352,8 +356,18 @@
     </div>
 
     <div class="buttons">
+      <!-- 8 templates + Preview + Salvar -->
       <button type="button" class="btn-secondary" id="btnTemplateMcq">MCQ template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateYesNo">Yes/No template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateTrueFalse">True/False template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateImageMcq">Image Choice template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateAudioMcq">Listen &amp; Choose template</button>
       <button type="button" class="btn-secondary" id="btnTemplateFill">Fillblank template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateOrder">Order sentence template</button>
+      <button type="button" class="btn-secondary" id="btnTemplateMatch">Match pairs template</button>
+
+      <button type="button" class="btn-secondary" id="btnPreview">👀 Preview</button>
+
       <button type="submit" class="btn-primary" id="btnSave">
         💾 Salvar questão
       </button>
@@ -464,8 +478,10 @@
     if (btnSearch) btnSearch.disabled = !!flag;
   }
 
-  // ==== Templates rápidos para JSON ====
+    // ==== Templates rápidos para JSON ====
   const txtJson = document.getElementById('json');
+
+  // 1) MCQ
   document.getElementById('btnTemplateMcq').onclick = () => {
     txtJson.value = JSON.stringify({
       type: "mcq",
@@ -484,23 +500,217 @@
     }, null, 2);
   };
 
-  document.getElementById('btnTemplateFill').onclick = () => {
+  // 2) Yes/No
+  document.getElementById('btnTemplateYesNo').onclick = () => {
     txtJson.value = JSON.stringify({
-      type: "fillblank",
-      prompt: "Jesus was born in {blank}.",
-      image: "images/bethlehem.png",
+      type: "yesno",
+      prompt: "Is this Mary?",
+      image: "images/mary.png",
       options: [
-        { label: "Nazareth",  value: "Nazareth" },
-        { label: "Bethlehem", value: "Bethlehem" }
+        { label: "Yes", value: "yes" },
+        { label: "No",  value: "no"  }
       ],
-      answer: "Bethlehem",
-      grammarTag: "vocabulary-places",
+      answer: "yes",
+      grammarTag: "yesno-questions",
+      skillType: "listening",
+      difficulty: "easy"
+    }, null, 2);
+  };
+
+  // 3) True/False
+  document.getElementById('btnTemplateTrueFalse').onclick = () => {
+    txtJson.value = JSON.stringify({
+      type: "truefalse",
+      prompt: "Mary visits Elizabeth.",
+      image: "images/mary_elizabeth.png",
+      options: [
+        { label: "True",  value: "true" },
+        { label: "False", value: "false" }
+      ],
+      answer: "true",
+      grammarTag: "statements",
       skillType: "reading",
+      difficulty: "easy"
+    }, null, 2);
+  };
+
+  // 4) Image Choice (MCQ com imagens)
+  document.getElementById('btnTemplateImageMcq').onclick = () => {
+    txtJson.value = JSON.stringify({
+      type: "image_mcq",
+      prompt: "Click on Mary.",
+      options: [
+        { label: "Mary",      value: "mary",      image: "images/mary.png" },
+        { label: "Elizabeth", value: "elizabeth", image: "images/elizabeth.png" }
+      ],
+      answer: "mary",
+      grammarTag: "names",
+      skillType: "vocabulary",
+      difficulty: "easy"
+    }, null, 2);
+  };
+
+  // 5) Listen & Choose
+  document.getElementById('btnTemplateAudioMcq').onclick = () => {
+    txtJson.value = JSON.stringify({
+      type: "audio_mcq",
+      prompt: "Listen and choose the correct sentence.",
+      promptAudio: "audio/mary_visits_elizabeth.mp3",
+      options: [
+        { label: "Mary visits Elizabeth.",   value: "a" },
+        { label: "Elizabeth visits Mary.",   value: "b" }
+      ],
+      answer: "a",
+      grammarTag: "present-simple",
+      skillType: "listening",
       difficulty: "medium"
     }, null, 2);
   };
 
-  // ==== Salvando questão + activity ====
+  // 6) Fill in the blank
+  document.getElementById('btnTemplateFill').onclick = () => {
+    txtJson.value = JSON.stringify({
+      "type": "fillblank",
+    "prompt": "Elizabeth said, \"God ___ you!\"",
+    "image": "/Level0/Unit1/DataStory/images/imagem5.png",
+    "options": [
+      { "label": "bless", "value": "bless", "audio": "/Level0/Unit1/data2/sounds/som6.mp3" },
+      { "label": "welcome", "value": "welcome", "audio": "/Level0/Unit1/data2/sounds/som3.mp3" }
+    ],
+    "answer": "bless",
+    "promptAudio": "/Level0/Unit1/QA/prompt10.mp3",
+    "grammarTag": "vocabulary-greetings",
+    "skillType": "listening",
+    "difficulty": "easy"
+    }, null, 2);
+  };
+
+  // 7) Order sentence
+  document.getElementById('btnTemplateOrder').onclick = () => {
+    txtJson.value = JSON.stringify({
+      type: "order",
+      prompt: "Put the words in order.",
+      image: "images/order_sentence.png",
+      // O preview usa "options" para montar os botões de palavras
+      options: ["Mary", "visits", "Elizabeth"],
+      // (opcional) manter também "chunks" se quiser para organização futura
+      chunks: ["Mary", "visits", "Elizabeth"],
+      answer: ["Mary", "visits", "Elizabeth"],
+      grammarTag: "word-order",
+      skillType: "grammar",
+      difficulty: "medium"
+    }, null, 2);
+  };
+
+  // 8) Match pairs
+  document.getElementById('btnTemplateMatch').onclick = () => {
+    txtJson.value = JSON.stringify({
+      type: "match",
+      prompt: "Match the character with the description.",
+      // left.value e right.value precisam ser IGUAIS em cada par
+      pairs: [
+        {
+          left:  { label: "Mary",      value: "mary" },
+          right: { label: "Mother of Jesus", value: "mary" }
+        },
+        {
+          left:  { label: "Elizabeth", value: "elizabeth" },
+          right: { label: "Mother of John",  value: "elizabeth" }
+        }
+      ],
+      grammarTag: "relationships",
+      skillType: "vocabulary",
+      difficulty: "medium"
+    }, null, 2);
+  };
+
+  // ==== Função para montar payload de preview (meta + question) ====
+  function buildPreviewPayload(){
+    const levelRaw = document.getElementById('level').value.trim();
+    const unitRaw  = document.getElementById('unit').value.trim();
+    const faseRaw  = document.getElementById('fase').value.trim();
+    let   qId      = document.getElementById('questionId').value.trim();
+    const orderRaw = document.getElementById('order').value.trim();
+    const typeQuick= document.getElementById('typeQuick').value;
+    const jsonStr  = txtJson.value.trim();
+
+    if (!levelRaw || !unitRaw || !faseRaw || !jsonStr) {
+      showToast("Preencha Level, Unit, Fase e o JSON da questão antes de fazer o preview.");
+      return null;
+    }
+
+    const levelKey = normalizeDir("Level", levelRaw, "0");
+    const unitKey  = normalizeDir("Unit",  unitRaw,  "1");
+    const faseKey  = String(parseInt(faseRaw, 10) || 1);
+
+    if (!qId) {
+      qId = `Q_${Date.now()}`;
+    }
+
+    let orderNum = null;
+    if (orderRaw) {
+      const n = parseInt(orderRaw, 10);
+      if (!isNaN(n) && n > 0) orderNum = n;
+    }
+
+    let obj;
+    try {
+      obj = JSON.parse(jsonStr);
+    } catch (err) {
+      console.error("JSON inválido para preview:", err);
+      showToast("Erro: JSON inválido. Verifique a sintaxe antes do preview.");
+      return null;
+    }
+
+    // aplica metadados básicos (mesma lógica do submit)
+    obj.id    = obj.id || qId;
+    obj.level = obj.level || levelKey;
+    obj.unit  = obj.unit  || unitKey;
+    obj.fase  = obj.fase  || faseKey;
+    if (orderNum != null) {
+      obj.order = orderNum;
+    }
+    if (typeQuick && !obj.type) {
+      obj.type = typeQuick;
+    }
+
+    const meta = {
+      level: levelKey,
+      unit:  unitKey,
+      fase:  faseKey,
+      questionId: obj.id,
+      order: obj.order || orderNum || 1,
+      difficulty: obj.difficulty || "easy",
+      tags: {
+        grammar:   obj.grammarTag || null,
+        vocabulary: obj.vocabTag || obj.vocabularyTag || null,
+        skill:     obj.skillType || null
+      }
+    };
+
+    return { meta, question: obj };
+  }
+
+  // ==== Botão Preview: salva em localStorage e abre qa-preview.html ====
+  const btnPreview = document.getElementById('btnPreview');
+  btnPreview.addEventListener('click', () => {
+    const payload = buildPreviewPayload();
+    if (!payload) return;
+
+    try {
+      // chave usada pelo qa-preview.html (mensagem: hannahQA_preview)
+      localStorage.setItem('hannahQA_preview', JSON.stringify(payload));
+    } catch (err) {
+      console.error("Erro ao salvar preview no localStorage:", err);
+      showToast("Erro ao salvar dados no navegador para o preview.");
+      return;
+    }
+
+    // abre nova aba com a tela de preview
+    window.open('qa-preview.html', '_blank');
+  });
+
+  // ==== Salvando questão + activity (Firebase) ====
   document.getElementById('q-form').addEventListener('submit', async (e) => {
     e.preventDefault();
 
@@ -644,7 +854,7 @@
 
       if (!act || !Array.isArray(act.questionIds) || act.questionIds.length === 0){
         resultsEl.innerHTML = "<div class='hint'>Nenhuma questão cadastrada para esta atividade ainda.</div>";
-        setStatus("<b>Status:</b> nenhuma questão encontrada em <code>activities/"+activityKey+"</code>.");
+        setStatus("<b>Status:</b> nenhuma questão encontrado em <code>activities/"+activityKey+"</code>.");
         lastSearch = {activityKey, levelKey, unitKey, faseKey, items: []};
         return;
       }
