--- a/Questions/Uploader/upload-questoes.html
+++ b/Questions/Uploader/upload-questoes.html
@@ -575,14 +575,38 @@
   document.getElementById('btnTemplateImageMcq').onclick = () => {
     applyDropdownDefaultsToUI("vocabulary", "easy");
     txtJson.value = JSON.stringify({
-      type: "image_mcq",
-      prompt: "Click on Mary.",
-      options: [
-        { label: "Mary",      value: "mary",      image: "images/mary.png" },
-        { label: "Elizabeth", value: "elizabeth", image: "images/elizabeth.png" }
-      ],
-      answer: "mary"
-    }, null, 2);
+  "answer": "mary",
+  "difficulty": "easy",
+  "fase": "10",
+  "id": "Q_1765664627181",
+  "image": "/Level0/Unit1/data1/imagens/imagem1.png",
+  "level": "Level0",
+  "options": [
+    {
+      "audio": "/Level0/Unit1/data1/sounds/som1.mp3",
+      "image": "/Level0/Unit1/data1/imagens/imagem1.png",
+      "label": "Mary",
+      "value": "mary"
+    },
+    {
+      "audio": "/Level0/Unit1/data1/sounds/som2.mp3",
+      "image": "/Level0/Unit1/data1/imagens/imagem2.png",
+      "label": "Elizabeth",
+      "value": "elizabeth"
+    },
+    {
+      "audio": "/Level0/Unit1/data1/sounds/som3.mp3",
+      "image": "/Level0/Unit1/data1/imagens/imagem3.png",
+      "label": "Jesus",
+      "value": "jesus"
+    }
+  ],
+  "prompt": "Look. Choose.",
+  "promptAudio": "/Level0/Unit1/QA2/prompt1.mp3",
+  "skillType": "vocabulary",
+  "type": "image_mcq",
+  "unit": "Unit1"
+}, null, 2);
   };
 
   // 5) Listen & Choose
